--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -4,6 +4,15 @@ Name: <%= @application.name %>
 <p>Address: <%= @application.street_address %>, <%= @application.city %>, <%= @application.state %> <%= @application.zip_code %></p>
 <p>Good Home Description: <%= @application.description %></p>
 <p>Application Status: <%= @application.application_status %></p>
+
+<br>
+<h3>Add a Pet to this Application</h3>
+<%= form_with url: "/applications/#{@application.id}", method: :get, local: true do |f| %>
+  <%= f.label :search, "Search for a Pet's name" %>
+  <%= f.text_field :search %>
+  <%= f.submit "Search" %>
+<% end %>
+
 <section id="application-<%= @application.id %>" >
   <% @pets.each do |pet| %>
     <p> <%=link_to "Pet Name: #{pet.name}", "/pets/#{pet.id}" %></p>
