--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -5,7 +5,7 @@ Name: <%= @application.name %>
 <p>Good Home Description: <%= @application.description %></p>
 <p>Application Status: <%= @application.application_status %></p>
 <br>
-<% if @application.application_status == 'In Progress' %>
+<% if @application.application_status == 'In Progress'%>
 <h3>Add a Pet to this Application</h3>
   <%= form_with url: "/applications/#{@application.id}", method: :get, local: true do |f| %>
     <%= f.label :search, "Search for a Pet's name" %>
@@ -18,7 +18,7 @@ Name: <%= @application.name %>
 <% if params[:search] %>
   <section id="application-<%= @application.id %>" >
     <% @pets_search.each do |pet| %>
-        <p> <%=link_to "Pet Name: #{pet.name}", "/pets/#{pet.id}" %> <%= link_to "Adopt this Pet", "/applications/#{@application.id}", method: :get, params: {adopt_pet: pet} %> </p>
+      <p> <%=link_to "Pet Name: #{pet.name}", "/pets/#{pet.id}" %> <%= button_to "Adopt this Pet", "/applications/#{@application.id}", method: :get, params: {adopt_pet: pet} %> </p>
     <% end %>
   </section>
 <% end %>
