--- a/app/views/admin_shelters/index.html.erb
+++ b/app/views/admin_shelters/index.html.erb
@@ -3,3 +3,10 @@
 <% @shelters.each do |shelter| %>
   <p> <%= shelter.name %> </p>
 <% end %>
+
+<h2>Shelter's with Pending Applications</h2>
+<% @applications.pending_applications.each do |shelter| %>
+<section id="pending-<%= shelter.id %>">
+  <p> <%= shelter.name %> </p>
+</section>
+<% end %>
